# docs/swagger.yaml
@@ -1,10 +1,13 @@
 basePath: /
 definitions:
-  api.ErrorResponse:
+  api.AddMarkerErrorResponse:
     properties:
       applicationStatusCode:
         description: Application-specific error code
-        type: integer
+        type: string
+      entityStatusCode:
+        description: Entity-specific error code
+        type: string
       httpStatusCode:
         description: HTTP status code for the error
         type: integer
@@ -17,34 +20,257 @@ definitions:
         description: Additional metadata about the error, such as timestamps and request
           IDs
     type: object
+  api.AddMarkerRequest:
+    properties:
+      marker:
+        $ref: '#/definitions/models.Marker'
+    type: object
+  api.AddMarkerResponse:
+    properties:
+      marker:
+        $ref: '#/definitions/models.Marker'
+    type: object
+  api.AddMarkerSuccessResponse:
+    properties:
+      applicationStatusCode:
+        description: Application-specific status code
+        type: string
+      data:
+        $ref: '#/definitions/api.AddMarkerResponse'
+      entityStatusCode:
+        description: Entity-specific status code
+        type: string
+      httpStatusCode:
+        description: HTTP status code for the response
+        type: integer
+      message:
+        description: Success message describing the operation
+        type: string
+      metaData:
+        allOf:
+        - $ref: '#/definitions/api.Metadata'
+        description: Additional metadata about the response, such as timestamps and
+          request IDs
+    type: object
+  api.ErrorResponse:
+    properties:
+      applicationStatusCode:
+        description: Application-specific error code
+        type: string
+      entityStatusCode:
+        description: Entity-specific error code
+        type: string
+      httpStatusCode:
+        description: HTTP status code for the error
+        type: integer
+      message:
+        description: Error message describing the issue
+        type: string
+      metaData:
+        allOf:
+        - $ref: '#/definitions/api.Metadata'
+        description: Additional metadata about the error, such as timestamps and request
+          IDs
+    type: object
+  api.GetMarkersErrorResponse:
+    properties:
+      applicationStatusCode:
+        description: Application-specific error code
+        type: string
+      entityStatusCode:
+        description: Entity-specific error code
+        type: string
+      httpStatusCode:
+        description: HTTP status code for the error
+        type: integer
+      message:
+        description: Error message describing the issue
+        type: string
+      metaData:
+        allOf:
+        - $ref: '#/definitions/api.Metadata'
+        description: Additional metadata about the error, such as timestamps and request
+          IDs
+    type: object
+  api.GetMarkersRequest:
+    type: object
+  api.GetMarkersResponse:
+    properties:
+      markers:
+        items:
+          $ref: '#/definitions/models.Marker'
+        type: array
+    type: object
+  api.GetMarkersSuccessResponse:
+    properties:
+      applicationStatusCode:
+        description: Application-specific status code
+        type: string
+      data:
+        $ref: '#/definitions/api.GetMarkersResponse'
+      entityStatusCode:
+        description: Entity-specific status code
+        type: string
+      httpStatusCode:
+        description: HTTP status code for the response
+        type: integer
+      message:
+        description: Success message describing the operation
+        type: string
+      metaData:
+        allOf:
+        - $ref: '#/definitions/api.Metadata'
+        description: Additional metadata about the response, such as timestamps and
+          request IDs
+    type: object
+  api.GetTimelineErrorResponse:
+    properties:
+      applicationStatusCode:
+        description: Application-specific error code
+        type: string
+      entityStatusCode:
+        description: Entity-specific error code
+        type: string
+      httpStatusCode:
+        description: HTTP status code for the error
+        type: integer
+      message:
+        description: Error message describing the issue
+        type: string
+      metaData:
+        allOf:
+        - $ref: '#/definitions/api.Metadata'
+        description: Additional metadata about the error, such as timestamps and request
+          IDs
+    type: object
+  api.GetTimelineRequest:
+    properties:
+      filter:
+        $ref: '#/definitions/api.MediaFilter'
+    type: object
+  api.GetTimelineResponse:
+    properties:
+      device:
+        $ref: '#/definitions/models.Device'
+      media:
+        items:
+          $ref: '#/definitions/models.Media'
+        type: array
+    type: object
+  api.GetTimelineSuccessResponse:
+    properties:
+      applicationStatusCode:
+        description: Application-specific status code
+        type: string
+      data:
+        $ref: '#/definitions/api.GetTimelineResponse'
+      entityStatusCode:
+        description: Entity-specific status code
+        type: string
+      httpStatusCode:
+        description: HTTP status code for the response
+        type: integer
+      message:
+        description: Success message describing the operation
+        type: string
+      metaData:
+        allOf:
+        - $ref: '#/definitions/api.Metadata'
+        description: Additional metadata about the response, such as timestamps and
+          request IDs
+    type: object
+  api.MediaFilter:
+    properties:
+      classifications:
+        items:
+          type: string
+        type: array
+      dates:
+        items:
+          type: string
+        type: array
+      devices:
+        items:
+          type: string
+        type: array
+      favourite:
+        type: boolean
+      globalSearch:
+        type: boolean
+      hasLabel:
+        type: boolean
+      hourRange:
+        $ref: '#/definitions/models.HourRange'
+      lastMedia:
+        type: integer
+      limit:
+        type: integer
+      markers:
+        items:
+          type: string
+        type: array
+      offset:
+        type: integer
+      regions:
+        items:
+          $ref: '#/definitions/models.Region'
+        type: array
+      sort:
+        type: string
+      viewStyle:
+        type: string
+    type: object
   api.Metadata:
     properties:
       error:
         description: Error message if any
         type: string
       function:
+        description: Function name where the response was generated
         type: string
+      language:
+        description: Language of the response, if applicable
+        type: string
+      missingFields:
+        description: List of missing fields in the request
+        items:
+          type: string
+        type: array
       organisationId:
+        description: Organisation ID for the request
         type: string
       path:
+        description: Path of the request
         type: string
       timestamp:
+        description: Timestamp of the request or response
         type: integer
       traceId:
+        description: Trace ID for tracking requests
         type: string
       userId:
+        description: User ID of the user making the request
         type: string
     type: object
   api.SuccessResponse:
     properties:
       applicationStatusCode:
-        type: integer
+        description: Application-specific status code
+        type: string
+      entityStatusCode:
+        description: Entity-specific status code
+        type: string
       httpStatusCode:
+        description: HTTP status code for the response
         type: integer
       message:
+        description: Success message describing the operation
         type: string
       metaData:
-        $ref: '#/definitions/api.Metadata'
+        allOf:
+        - $ref: '#/definitions/api.Metadata'
+        description: Additional metadata about the response, such as timestamps and
+          request IDs
     type: object
   models.Audit:
     properties:
@@ -355,6 +581,13 @@ definitions:
         description: Dimensions of the floor plan in pixels
         type: integer
     type: object
+  models.HourRange:
+    properties:
+      end:
+        type: integer
+      start:
+        type: integer
+    type: object
   models.IO:
     properties:
       audit:
@@ -538,6 +771,13 @@ definitions:
           type: string
         type: array
     type: object
+  models.Point:
+    properties:
+      x:
+        type: number
+      "y":
+        type: number
+    type: object
   models.Preset:
     properties:
       name:
@@ -550,6 +790,21 @@ definitions:
         type: number
       z:
         type: number
+    type: object
+  models.Region:
+    properties:
+      device:
+        type: string
+      height:
+        type: integer
+      id:
+        type: string
+      regionPoints:
+        items:
+          $ref: '#/definitions/models.Point'
+        type: array
+      width:
+        type: integer
     type: object
   models.Role:
     properties:
@@ -772,6 +1027,70 @@ info:
   title: Models API
   version: "1.0"
 paths:
+  /internal/addmarkererrorresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure AddMarkerErrorResponse schema
+        is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.AddMarkerErrorResponse'
+      summary: Get AddMarkerErrorResponse (schema generation only)
+      tags:
+      - internal
+  /internal/addmarkerrequest:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure AddMarkerRequest schema is
+        generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.AddMarkerRequest'
+      summary: Get AddMarkerRequest (schema generation only)
+      tags:
+      - internal
+  /internal/addmarkerresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure AddMarkerResponse schema
+        is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.AddMarkerResponse'
+      summary: Get AddMarkerResponse (schema generation only)
+      tags:
+      - internal
+  /internal/addmarkersuccessresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure AddMarkerSuccessResponse
+        schema is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.AddMarkerSuccessResponse'
+      summary: Get AddMarkerSuccessResponse (schema generation only)
+      tags:
+      - internal
   /internal/audit:
     get:
       consumes:
@@ -916,6 +1235,21 @@ paths:
       summary: Get DevicePlacement (schema generation only)
       tags:
       - internal
+  /internal/entitystatus:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure EntityStatus schema is generated
+        in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema: {}
+      summary: Get EntityStatus (schema generation only)
+      tags:
+      - internal
   /internal/featurepermissions:
     get:
       consumes:
@@ -946,6 +1280,150 @@ paths:
           schema:
             $ref: '#/definitions/models.FloorPlan'
       summary: Get FloorPlan (schema generation only)
+      tags:
+      - internal
+  /internal/getmarkerserrorresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetMarkersErrorResponse schema
+        is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetMarkersErrorResponse'
+      summary: Get GetMarkersErrorResponse (schema generation only)
+      tags:
+      - internal
+  /internal/getmarkersrequest:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetMarkersRequest schema
+        is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetMarkersRequest'
+      summary: Get GetMarkersRequest (schema generation only)
+      tags:
+      - internal
+  /internal/getmarkersresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetMarkersResponse schema
+        is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetMarkersResponse'
+      summary: Get GetMarkersResponse (schema generation only)
+      tags:
+      - internal
+  /internal/getmarkerssuccessresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetMarkersSuccessResponse
+        schema is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetMarkersSuccessResponse'
+      summary: Get GetMarkersSuccessResponse (schema generation only)
+      tags:
+      - internal
+  /internal/gettimelineerrorresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetTimelineErrorResponse
+        schema is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetTimelineErrorResponse'
+      summary: Get GetTimelineErrorResponse (schema generation only)
+      tags:
+      - internal
+  /internal/gettimelinerequest:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetTimelineRequest schema
+        is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetTimelineRequest'
+      summary: Get GetTimelineRequest (schema generation only)
+      tags:
+      - internal
+  /internal/gettimelineresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetTimelineResponse schema
+        is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetTimelineResponse'
+      summary: Get GetTimelineResponse (schema generation only)
+      tags:
+      - internal
+  /internal/gettimelinesuccessresponse:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure GetTimelineSuccessResponse
+        schema is generated in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.GetTimelineSuccessResponse'
+      summary: Get GetTimelineSuccessResponse (schema generation only)
+      tags:
+      - internal
+  /internal/hourrange:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure HourRange schema is generated
+        in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.HourRange'
+      summary: Get HourRange (schema generation only)
       tags:
       - internal
   /internal/io:
@@ -1028,6 +1506,22 @@ paths:
       summary: Get MediaAtRuntimeMetadata (schema generation only)
       tags:
       - internal
+  /internal/mediafilter:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure MediaFilter schema is generated
+        in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.MediaFilter'
+      summary: Get MediaFilter (schema generation only)
+      tags:
+      - internal
   /internal/mediametadata:
     get:
       consumes:
@@ -1044,6 +1538,38 @@ paths:
       summary: Get MediaMetadata (schema generation only)
       tags:
       - internal
+  /internal/metadata:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure Metadata schema is generated
+        in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Metadata'
+      summary: Get Metadata (schema generation only)
+      tags:
+      - internal
+  /internal/point:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure Point schema is generated
+        in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Point'
+      summary: Get Point (schema generation only)
+      tags:
+      - internal
   /internal/preset:
     get:
       consumes:
@@ -1058,6 +1584,22 @@ paths:
           schema:
             $ref: '#/definitions/models.Preset'
       summary: Get Preset (schema generation only)
+      tags:
+      - internal
+  /internal/region:
+    get:
+      consumes:
+      - application/json
+      description: Internal endpoint used only to ensure Region schema is generated
+        in OpenAPI spec
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Region'
+      summary: Get Region (schema generation only)
       tags:
       - internal
   /internal/role:
